added screen to prevent click handling except at top of column.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="column" id="column4" data-column="4"></div>
         <div class="column" id="column5" data-column="5"></div>
         <div class="column" id="column6" data-column="6"></div>
+        <div id="screen"></div>
     </div>
 
     <script src="main.js"></script>
