adjusted grid borders and token margins, added css grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <h1>Connect Four</h1>
     <div id="game_grid">
         <div class="column" id="column0" data-column="0"></div>
         <div class="column" id="column1" data-column="1"></div>
